DevOps/Kubernetes/poll.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
spec:
  selector:
    matchLabels:
      app: poll
  replicas: 2
  template:
    metadata:
      labels:
        app: poll
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - poll
                      - redis
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: poll
          image: epitechcontent/t-dop-600-poll:k8s
          resources:
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 80
      restartPolicy: Always
