DevOps/Kubernetes/cadvisor.daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
  namespace: kube-system
  labels:
    app: cadvisor
spec:
  selector:
    matchLabels:
      name: "cadvisor"
  template:
    metadata:
      labels:
        name: cadvisor
    spec:
      containers:
        - name: cadvisor
          image: google/cadvisor:latest
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: var-run
              mountPath: /var/run
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker
              readOnly: true
            - name: disk
              mountPath: /dev/disk
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: var-run
          hostPath:
            path: /var/run
        - name: sys
          hostPath:
            path: /sys
        - name: docker
          hostPath:
            path: /var/lib/docker
        - name: disk
          hostPath:
            path: /dev/disk
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  namespace: kube-system
spec:
  type: NodePort
  selector:
    name: cadvisor
  ports:
    - name: http
      targetPort: 8080
      port: 8080
