DevOps/Kubernetes/poll.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  type: ClusterIP
  selector:
    app: poll
  ports:
    - name: http
      targetPort: 80
      port: 80
