DevOps/Kubernetes/postgres.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - targetPort: 5432
      port: 5432
