DevOps/Kubernetes/redis.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - targetPort: 6379
      port: 6379
