DevOps/Kubernetes/traefik.service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-public
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - name: http
      targetPort: 80
      port: 80
      nodePort: 30021
    - name: admin
      targetPort: 8080
      port: 8080
      nodePort: 30042
