DevOps/Kubernetes/poll.ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: poll-service
              servicePort: http
